Layout parameter (for force-directed) and Visual Style parameters are optimized for nicer visualization.
git-svn-id: http://chianti.ucsd.edu/svn@20132 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/ucsd/ruschein/PanGIA/resources/PanGIAVS.props
+++ b/csplugins/trunk/ucsd/ruschein/PanGIA/resources/PanGIAVS.props
@@ -3,7 +3,7 @@
 # Any changes may make these visual mappings unreadable.
 # Please make sure you know what you are doing before modifying this file by hand.
 #
-#Thu May 06 11:53:35 PDT 2010
+#Thu May 06 17:08:58 PDT 2010
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeColor=102,102,102
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeFont=SanSerif,plain,10
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeFontSize=5.0
@@ -44,7 +44,7 @@ edgeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeWidth=70.0
 edgeAppearanceCalculator.Complex\ Overview\ Style.edgeLineWidthCalculator=Complex Overview Style-EdgeWidthMapping
 edgeAppearanceCalculator.Complex\ Overview\ Style.edgeOpacityCalculator=Complex Overview Style-EdgeOpacityMapping
 edgeAppearanceCalculator.Complex\ Overview\ Style.nodeSizeLocked=true
-edgeAppearanceCalculator.Module\ Style.defaultEdgeColor=51,51,51
+edgeAppearanceCalculator.Module\ Style.defaultEdgeColor=0,51,51
 edgeAppearanceCalculator.Module\ Style.defaultEdgeFont=SanSerif,plain,10
 edgeAppearanceCalculator.Module\ Style.defaultEdgeFontSize=10.0
 edgeAppearanceCalculator.Module\ Style.defaultEdgeLabel=
@@ -53,8 +53,8 @@ edgeAppearanceCalculator.Module\ Style.defaultEdgeLabelOpacity=255.0
 edgeAppearanceCalculator.Module\ Style.defaultEdgeLabelPosition=C,C,c,0,0
 edgeAppearanceCalculator.Module\ Style.defaultEdgeLabelWidth=100.0
 edgeAppearanceCalculator.Module\ Style.defaultEdgeLineStyle=SOLID
-edgeAppearanceCalculator.Module\ Style.defaultEdgeLineWidth=3.0
-edgeAppearanceCalculator.Module\ Style.defaultEdgeOpacity=255.0
+edgeAppearanceCalculator.Module\ Style.defaultEdgeLineWidth=10.0
+edgeAppearanceCalculator.Module\ Style.defaultEdgeOpacity=120.0
 edgeAppearanceCalculator.Module\ Style.defaultEdgeSourceArrowColor=0,0,0
 edgeAppearanceCalculator.Module\ Style.defaultEdgeSourceArrowOpacity=255.0
 edgeAppearanceCalculator.Module\ Style.defaultEdgeSourceArrowShape=NONE
@@ -81,6 +81,7 @@ edgeAppearanceCalculator.Module\ Style.defaultNodeShowNestedNetwork=true
 edgeAppearanceCalculator.Module\ Style.defaultNodeSize=35.0
 edgeAppearanceCalculator.Module\ Style.defaultNodeToolTip=
 edgeAppearanceCalculator.Module\ Style.defaultNodeWidth=70.0
+edgeAppearanceCalculator.Module\ Style.nodeSizeLocked=false
 edgeAppearanceCalculator.Nested\ Network\ Style.defaultEdgeColor=51,51,51
 edgeAppearanceCalculator.Nested\ Network\ Style.defaultEdgeFont=SanSerif,plain,10
 edgeAppearanceCalculator.Nested\ Network\ Style.defaultEdgeFontSize=10.0
@@ -660,7 +661,7 @@ nodeAppearanceCalculator.Complex\ Overview\ Style.defaultNodeWidth=70.0
 nodeAppearanceCalculator.Complex\ Overview\ Style.nodeFontSizeCalculator=Complex Overview Style-Node Font Size-Continuous Mapper
 nodeAppearanceCalculator.Complex\ Overview\ Style.nodeLabelCalculator=Complex Overview Style-Node Label-Passthrough Mapper
 nodeAppearanceCalculator.Complex\ Overview\ Style.nodeSizeLocked=true
-nodeAppearanceCalculator.Complex\ Overview\ Style.nodeUniformSizeCalculator=Complex Overview Style-NodeSizeMapping
+nodeAppearanceCalculator.Complex\ Overview\ Style.nodeUniformSizeCalculator=Complex Overview Style-Node Size-Continuous Mapper
 nodeAppearanceCalculator.Module\ Style.defaultEdgeColor=0,0,0
 nodeAppearanceCalculator.Module\ Style.defaultEdgeFont=SanSerif,plain,10
 nodeAppearanceCalculator.Module\ Style.defaultEdgeFontSize=10.0
@@ -679,26 +680,27 @@ nodeAppearanceCalculator.Module\ Style.defaultEdgeTargetArrowColor=0,0,0
 nodeAppearanceCalculator.Module\ Style.defaultEdgeTargetArrowOpacity=255.0
 nodeAppearanceCalculator.Module\ Style.defaultEdgeTargetArrowShape=NONE
 nodeAppearanceCalculator.Module\ Style.defaultEdgeToolTip=
-nodeAppearanceCalculator.Module\ Style.defaultNodeBorderColor=0,0,0
+nodeAppearanceCalculator.Module\ Style.defaultNodeBorderColor=0,51,51
 nodeAppearanceCalculator.Module\ Style.defaultNodeBorderOpacity=255.0
-nodeAppearanceCalculator.Module\ Style.defaultNodeFillColor=0,102,153
-nodeAppearanceCalculator.Module\ Style.defaultNodeFont=Default,plain,12
-nodeAppearanceCalculator.Module\ Style.defaultNodeFontSize=12.0
-nodeAppearanceCalculator.Module\ Style.defaultNodeHight=30.0
+nodeAppearanceCalculator.Module\ Style.defaultNodeFillColor=204,255,255
+nodeAppearanceCalculator.Module\ Style.defaultNodeFont=Arial-BoldMT,plain,12
+nodeAppearanceCalculator.Module\ Style.defaultNodeFontSize=28.0
+nodeAppearanceCalculator.Module\ Style.defaultNodeHight=50.0
 nodeAppearanceCalculator.Module\ Style.defaultNodeLabel=
 nodeAppearanceCalculator.Module\ Style.defaultNodeLabelColor=0,0,0
 nodeAppearanceCalculator.Module\ Style.defaultNodeLabelOpacity=255.0
-nodeAppearanceCalculator.Module\ Style.defaultNodeLabelPosition=S,N,c,0,0
+nodeAppearanceCalculator.Module\ Style.defaultNodeLabelPosition=C,C,c,0,0
 nodeAppearanceCalculator.Module\ Style.defaultNodeLabelWidth=100.0
 nodeAppearanceCalculator.Module\ Style.defaultNodeLineStyle=SOLID
-nodeAppearanceCalculator.Module\ Style.defaultNodeLineWidth=0.0
+nodeAppearanceCalculator.Module\ Style.defaultNodeLineWidth=3.0
 nodeAppearanceCalculator.Module\ Style.defaultNodeOpacity=255.0
 nodeAppearanceCalculator.Module\ Style.defaultNodeShape=ellipse
 nodeAppearanceCalculator.Module\ Style.defaultNodeShowNestedNetwork=true
-nodeAppearanceCalculator.Module\ Style.defaultNodeSize=45.0
+nodeAppearanceCalculator.Module\ Style.defaultNodeSize=10.0
 nodeAppearanceCalculator.Module\ Style.defaultNodeToolTip=
-nodeAppearanceCalculator.Module\ Style.defaultNodeWidth=70.0
+nodeAppearanceCalculator.Module\ Style.defaultNodeWidth=160.0
 nodeAppearanceCalculator.Module\ Style.nodeLabelCalculator=Module Style-Node Label-Passthrough Mapper
+nodeAppearanceCalculator.Module\ Style.nodeSizeLocked=false
 nodeAppearanceCalculator.Nested\ Network\ Style.defaultEdgeColor=0,0,0
 nodeAppearanceCalculator.Nested\ Network\ Style.defaultEdgeFont=SanSerif,plain,10
 nodeAppearanceCalculator.Nested\ Network\ Style.defaultEdgeFontSize=10.0
@@ -1034,18 +1036,23 @@ nodeFontSizeCalculator.BasicDiscrete.mapping.map.cell\ cycle=12.0
 nodeFontSizeCalculator.BasicDiscrete.mapping.type=DiscreteMapping
 nodeFontSizeCalculator.BasicDiscrete.visualPropertyType=NODE_FONT_SIZE
 nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.boundaryvalues=2
-nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv0.domainvalue=2.0
+nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv0.domainvalue=0.0
 nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv0.equal=12.0
 nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv0.greater=12.0
 nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv0.lesser=1.0
-nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv1.domainvalue=490.0
+nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv1.domainvalue=50.0
 nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv1.equal=30.0
 nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv1.greater=1.0
 nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv1.lesser=30.0
-nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.controller=gene count
+nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.controller=SQRT of gene count
 nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.interpolator=LinearNumberToNumberInterpolator
 nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.type=ContinuousMapping
 nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.visualPropertyType=NODE_FONT_SIZE
+nodeFontSizeCalculator.Node\ Font\ Size-Continuous\ Mapper.mapping.boundaryvalues=0
+nodeFontSizeCalculator.Node\ Font\ Size-Continuous\ Mapper.mapping.controller=gene count
+nodeFontSizeCalculator.Node\ Font\ Size-Continuous\ Mapper.mapping.interpolator=LinearNumberToNumberInterpolator
+nodeFontSizeCalculator.Node\ Font\ Size-Continuous\ Mapper.mapping.type=ContinuousMapping
+nodeFontSizeCalculator.Node\ Font\ Size-Continuous\ Mapper.visualPropertyType=NODE_FONT_SIZE
 nodeLabelCalculator.BasicContinuous.mapping.boundaryvalues=3
 nodeLabelCalculator.BasicContinuous.mapping.bv0.domainvalue=-1.0
 nodeLabelCalculator.BasicContinuous.mapping.bv0.equal=under
@@ -1267,6 +1274,23 @@ nodeUniformSizeCalculator.Complex\ Overview\ Style-NodeSizeMapping.mapping.contr
 nodeUniformSizeCalculator.Complex\ Overview\ Style-NodeSizeMapping.mapping.interpolator=LinearNumberToNumberInterpolator
 nodeUniformSizeCalculator.Complex\ Overview\ Style-NodeSizeMapping.mapping.type=ContinuousMapping
 nodeUniformSizeCalculator.Complex\ Overview\ Style-NodeSizeMapping.visualPropertyType=NODE_SIZE
+nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.boundaryvalues=3
+nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv0.domainvalue=0.0
+nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv0.equal=20.0
+nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv0.greater=20.0
+nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv0.lesser=1.0
+nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv1.domainvalue=7.940446734428406
+nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv1.equal=200.0
+nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv1.greater=200.0
+nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv1.lesser=200.0
+nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv2.domainvalue=40.0
+nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv2.equal=250.0
+nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv2.greater=1.0
+nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv2.lesser=250.0
+nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.controller=SQRT of gene count
+nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.interpolator=LinearNumberToNumberInterpolator
+nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.type=ContinuousMapping
+nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.visualPropertyType=NODE_SIZE
 nodeUniformSizeCalculator.Nested\ Network\ Style-Node\ Size-Discrete\ Mapper.mapping.controller=has_nested_network
 nodeUniformSizeCalculator.Nested\ Network\ Style-Node\ Size-Discrete\ Mapper.mapping.controllerType=4
 nodeUniformSizeCalculator.Nested\ Network\ Style-Node\ Size-Discrete\ Mapper.mapping.map.yes=60.0
