--- a/csplugins/trunk/ucsd/ruschein/PanGIA/resources/PanGIAVS.props
+++ b/csplugins/trunk/ucsd/ruschein/PanGIA/resources/PanGIAVS.props
@@ -3,7 +3,7 @@
 # Any changes may make these visual mappings unreadable.
 # Please make sure you know what you are doing before modifying this file by hand.
 #
-#Thu May 06 17:08:58 PDT 2010
+#Fri May 07 17:00:32 PDT 2010
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeColor=102,102,102
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeFont=SanSerif,plain,10
 edgeAppearanceCalculator.Complex\ Overview\ Style.defaultEdgeFontSize=5.0
@@ -81,6 +81,8 @@ edgeAppearanceCalculator.Module\ Style.defaultNodeShowNestedNetwork=true
 edgeAppearanceCalculator.Module\ Style.defaultNodeSize=35.0
 edgeAppearanceCalculator.Module\ Style.defaultNodeToolTip=
 edgeAppearanceCalculator.Module\ Style.defaultNodeWidth=70.0
+edgeAppearanceCalculator.Module\ Style.edgeColorCalculator=Module Style-Edge Color-Discrete Mapper
+edgeAppearanceCalculator.Module\ Style.edgeLineStyleCalculator=Module Style-Edge Line Style-Discrete Mapper
 edgeAppearanceCalculator.Module\ Style.nodeSizeLocked=false
 edgeAppearanceCalculator.Nested\ Network\ Style.defaultEdgeColor=51,51,51
 edgeAppearanceCalculator.Nested\ Network\ Style.defaultEdgeFont=SanSerif,plain,10
@@ -347,8 +349,10 @@ edgeColorCalculator.Complex\ Overview\ Style-EdgeWidthMapping.mapping.controller
 edgeColorCalculator.Complex\ Overview\ Style-EdgeWidthMapping.mapping.interpolator=LinearNumberToColorInterpolator
 edgeColorCalculator.Complex\ Overview\ Style-EdgeWidthMapping.mapping.type=ContinuousMapping
 edgeColorCalculator.Complex\ Overview\ Style-EdgeWidthMapping.visualPropertyType=EDGE_COLOR
-edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.controller=interaction
+edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.controller=Module Finder.Interaction Type
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.controllerType=4
+edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Genetic=0,0,255
+edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Physical=51,51,51
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.genetic=255,0,51
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.physical=51,255,51
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.type=DiscreteMapping
@@ -453,6 +457,12 @@ edgeLineStyleCalculator.InteractionType.mapping.map.pd=SOLID
 edgeLineStyleCalculator.InteractionType.mapping.map.pp=SOLID
 edgeLineStyleCalculator.InteractionType.mapping.type=DiscreteMapping
 edgeLineStyleCalculator.InteractionType.visualPropertyType=EDGE_LINE_STYLE
+edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.controller=Module Finder.Interaction Type
+edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.controllerType=4
+edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.map.Genetic=LONG_DASH
+edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.map.Physical=SOLID
+edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.type=DiscreteMapping
+edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.visualPropertyType=EDGE_LINE_STYLE
 edgeLineStyleCalculator.Sample1-Edge\ Line\ Style-Discrete\ Mapper.mapping.controller=interaction
 edgeLineStyleCalculator.Sample1-Edge\ Line\ Style-Discrete\ Mapper.mapping.controllerType=4
 edgeLineStyleCalculator.Sample1-Edge\ Line\ Style-Discrete\ Mapper.mapping.map.pd=LONG_DASH
