Unused image data files removed.
git-svn-id: http://chianti.ucsd.edu/svn@20183 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape/branches/cytoscape_28_custom_graphics/build.xml
+++ b/cytoscape/branches/cytoscape_28_custom_graphics/build.xml
@@ -204,15 +204,6 @@
 		<copy todir="${build.classes}/cytoscape/images">
 			<fileset dir="${basedir}/images" />
 		</copy>
-		<copy todir="${build.classes}/cytoscape/view/images">
-			<fileset dir="${basedir}/images" />
-		</copy>
-		<copy todir="${build.classes}/cytoscape/dialogs/images">
-			<fileset dir="${src.dir}/cytoscape/dialogs/images" />
-		</copy>
-		<copy todir="${build.classes}/cytoscape/visual/ui/images">
-			<fileset dir="${src.dir}/cytoscape/visual/ui/images" />
-		</copy>
 
 
 		<copy todir="${build.classes}">
@@ -276,13 +267,13 @@
 		description="Compiles all source code.">
 		<javac 
 		       destdir="${build.classes}" 
-		       nowarn="off" 
+		       nowarn="on" 
 		       debug="true" 
 		       source="${java.target_version}" 
 		       target="${java.target_version}"
 		       optimize="on" 
 		       includeAntRuntime="false" 
-		       deprecation="yes">
+		       deprecation="no">
 			<classpath refid="classpath" />
 			<include name="cytoscape/**" />
 			<src path="${src.dir}" />
