fixed the compile
git-svn-id: http://chianti.ucsd.edu/svn@20194 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/soc/ghuck/LabelPositioningPlugin/plugin/build.xml
+++ b/csplugins/trunk/soc/ghuck/LabelPositioningPlugin/plugin/build.xml
@@ -25,9 +25,9 @@
 
 
     <!-- Define the Cytoscape directories -->
-    <property name="cytoscape.dir" value="/home/gerardo/Cytoscape_v2.7.0"/>
+    <property name="cytoscape.dir" value="../../../../../cytoscape"/>
     <property name="cytoscape.lib.dir" value="${cytoscape.dir}/lib"/>
-    <property name="cytoscape.plugin.dir" value="${cytoscape.dir}/plugins"/>
+    <property name="cytoscape.plugin.dir" value="${cytoscape.dir}/plugins/core"/>
 
     <!-- Inheritable properties -->
     <property name="debug" value="on"/>
