added some tests as a prelude to future changes
git-svn-id: http://chianti.ucsd.edu/svn@20209 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/corelibs/trunk/render.stateful/build.xml
+++ b/corelibs/trunk/render.stateful/build.xml
@@ -144,7 +144,7 @@
                  usefile="true" />
       <formatter type="xml" 
                  usefile="true" />
-      <batchtest fork="yes" 
+      <batchtest fork="no" 
                  todir="${log.dir}" 
                  failureProperty="junit.test.failure"
                  errorProperty="junit.test.failure">
@@ -217,7 +217,7 @@
   <!-- =================================================================== -->
   <!-- Do everything                                                       --> 
   <!-- =================================================================== -->
-  <target name="all" depends="jar,docs,test" /> 
+  <target name="all" depends="jar,test,docs" /> 
 
   <!-- =================================================================== -->
   <!-- Clean up, get back to original state                                -->
