added a property that allows you to control the size of the unit test and thus its speed
git-svn-id: http://chianti.ucsd.edu/svn@20215 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/corelibs/trunk/render.immed/build.xml
+++ b/corelibs/trunk/render.immed/build.xml
@@ -134,9 +134,15 @@
   <target name="test"
           depends="jar-tests"
           if="tests.ok">
+    <echo message=""/>
+    <echo message="  If the tests are taking too long you can set the"/>
+	<echo message="  num.graph.objects property to something small (like 100):"/>
+    <echo message="      ant all -Dnum.graph.objects=100"/>
+    <echo message=""/>
     <junit printsummary="yes"
            haltonfailure="no"
            maxmemory="512M" >
+      <sysproperty key="num.graph.objects" value="${num.graph.objects}"/>
       <classpath refid="junit.class.path"/>
       <formatter type="plain" 
                  usefile="true" />
