Old plugin is compiling and working now!
A code clean up is still needed anyways.




git-svn-id: http://chianti.ucsd.edu/svn@20227 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/soc/ghuck/LabelPositioningPlugin/plugin/build.xml
+++ b/csplugins/trunk/soc/ghuck/LabelPositioningPlugin/plugin/build.xml
@@ -9,7 +9,7 @@
   <!-- =================================================================== -->
   <target name="init">
     <property name="plugin_name" value="LabelForceDirectedLayout"/>
-    <property name="plugin_class" value="LabelForceDirectedLayout.LabelForceDirectedLayout"/>  	  	
+    <property name="plugin_class" value="LabelPositioningPlugin.LabelPositioningPlugin"/>  	  	
     <property name="project.jar" value="${plugin_name}.jar"/>  	
     <property name="version" value="0.01"/>
     <property name="year" value="2010"/>
@@ -25,9 +25,9 @@
 
 
     <!-- Define the Cytoscape directories -->
-    <property name="cytoscape.dir" value="../../../../../cytoscape"/>
+    <property name="cytoscape.dir" value="/home/gerardo/Cytoscape"/>
     <property name="cytoscape.lib.dir" value="${cytoscape.dir}/lib"/>
-    <property name="cytoscape.plugin.dir" value="${cytoscape.dir}/plugins/core"/>
+    <property name="cytoscape.plugin.dir" value="${cytoscape.dir}/plugins"/>
 
     <!-- Inheritable properties -->
     <property name="debug" value="on"/>
