--- a/pathblast/trunk/etc/pathblast.properties
+++ b/pathblast/trunk/etc/pathblast.properties
@@ -1,24 +1,24 @@
 # define the blast command to use
 blast.blastall.command=blastall -p blastp -d TARGET_DB  -e 0.0001  -i QUERY_SEQS -m 7 -e E_VALUE -o OUTPUT_FILE
-blast.blastall.location=/cellar/users/mes/software/blast-2.2.12/bin
+blast.blastall.location=/usr/share/blast-2.2.12/bin
 
 # define the formatdb command to use
 blast.formatdb.command=formatdb -i TARGET_DB
-blast.formatdb.location=/cellar/users/mes/software/blast-2.2.12/bin
+blast.formatdb.location=/usr/share/blast-2.2.12/bin
 
 # Location of the temp dir.  This should be where tomcat is
 # installed as this dir needs to be accessible from the web:
 # e.g. ${tomcat.webapps}/pathblast/tmp
 # All you should really change in this is "${tomcat.webapps}" and
 # most likely not "/pathblast/tmp".
-pathblast.tmpdir=/usr/local/apps/apache-tomcat-5.5.12/webapps/pathblast/tmp
+pathblast.tmpdir=/usr/share/tomcat5/webapps/pathblast/tmp
 
 # location/name of DIP files
-dip.xin.filename=/usr/local/apps/PathBlast/dipdb/current.xin
-dip.fasta.filename=/usr/local/apps/PathBlast/dipdb/current.fa
+dip.xin.filename=/usr/share/PathBlast/dipdb/current.xin
+dip.fasta.filename=/usr/share/PathBlast/dipdb/current.fa
 
 # location of blast species databases
-blast.db.location=/usr/local/apps/PathBlast/blastdb
+blast.db.location=/usr/share/PathBlast/blastdb
 
 # location of cytoscape vizmap.props
-cytoscape.vizmap.props=/usr/local/apps/PathBlast/vizmap.props
+cytoscape.vizmap.props=/usr/share/PathBlast/vizmap.props
