Added License and minor code changes
git-svn-id: http://chianti.ucsd.edu/svn@20276 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/soc/ghuck/LabelPositioningPlugin/plugin/build.xml
+++ b/csplugins/trunk/soc/ghuck/LabelPositioningPlugin/plugin/build.xml
@@ -26,7 +26,7 @@
 
 
     <!-- Define the Cytoscape directories -->
-    <property name="cytoscape.dir" value="/home/gerardo/Cytoscape"/>
+    <property name="cytoscape.dir" value="/Users/gerardohuck/Cytoscape"/>
     <property name="cytoscape.lib.dir" value="${cytoscape.dir}/lib"/>
     <property name="cytoscape.plugin.dir" value="${cytoscape.dir}/plugins"/>
 
