Fixed a typo and added my name/institution.
git-svn-id: http://chianti.ucsd.edu/svn@20300 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/coreplugins/trunk/browser/resources/plugin.props
+++ b/coreplugins/trunk/browser/resources/plugin.props
@@ -22,7 +22,7 @@ pluginCategory=Core
 
 # List of authors.  Note each author and institution pair are separated by a : (colon)
 # each additional author institution pair must be separated from other pairs bye a ; (semicolon)
-pluginAuthorsIntsitutions=Kei Ono:UCSD;Rowan Christmas:Institute for Systems Biology
+pluginAuthorsIntstiutions=Kei Ono:UCSD;Rowan Christmas:Institute for Systems Biology;Dr. Johannes Ruscheinski:UCSD
 
 # -- The following properties should be set ONLY BY CORE PLUGINS -- #
 downloadURL=http://cytoscape.org/plugins/plugins.xml
