--- a/coreplugins/trunk/EquationFunctions/build.xml
+++ b/coreplugins/trunk/EquationFunctions/build.xml
@@ -2,19 +2,19 @@
 <!-- Browser plugin (browser.jar) build file (Eclipse 3.1)     -->
 <!-- =================================================================== -->
 
-<project name="equations" default="equations" basedir=".">
+<project name="EquationFunctions" default="EquationFunctions" basedir=".">
 
   <!-- =================================================================== -->
   <!-- Initialization target                                               -->
   <!-- =================================================================== -->
-  <target name="init-equations">
+  <target name="init-EquationFunctions">
     <tstamp/>
-    <property name="equations.Name" value="equations"/>
-    <property name="equations.name" value="equations"/>
-    <property name="equations.version" value="0.7"/>
-    <property name="equations.year" value="200"/>
+    <property name="EquationFunctions.Name" value="EquationFunctions"/>
+    <property name="EquationFunctions.name" value="EquationFunctions"/>
+    <property name="EquationFunctions.version" value="1.0"/>
+    <property name="EquationFunctions.year" value="2010"/>
     
-    <echo message="Building ${equations.name} version ${equations.version}."/>
+    <echo message="Building ${EquationFunctions.name} version ${EquationFunctions.version}."/>
 
     <!-- Inheritable properties -->
     <property name="debug" value="on"/>
@@ -22,48 +22,48 @@
     <property name="deprecation" value="on"/>
     <property name="nowarn" value="true"/>
     <property name="fork" value="false"/>
-    <property name="equations.root.dir" value="."/>
-    <property name="equations.lib.dir" value="${equations.root.dir}/lib"/>
+    <property name="EquationFunctions.root.dir" value="."/>
+    <property name="EquationFunctions.lib.dir" value="${EquationFunctions.root.dir}/lib"/>
 
     <path id="project.class.path">
       <pathelement path="${java.class.path}/"/>
     </path>
 
     <!-- Define the directories -->
-    <property name="equations.root.dir" value="./"/>
-    <property name="equations.src.dir" value="${equations.root.dir}/src"/>
-    <property name="equations.classes.dir" value="${equations.root.dir}/classes"/>
-    <property name="equations.javadoc.dir" value="${javadoc.dir}/equations"/>
-    <property name="equations.resources.dir" value="${equations.root.dir}/resources"/>
-    <property name="equations.manifest.dir" value="${equations.root.dir}/manifest"/>
-    <property name="equations.packages" value="equations.*"/>
+    <property name="EquationFunctions.root.dir" value="./"/>
+    <property name="EquationFunctions.src.dir" value="${EquationFunctions.root.dir}/src"/>
+    <property name="EquationFunctions.classes.dir" value="${EquationFunctions.root.dir}/classes"/>
+    <property name="EquationFunctions.javadoc.dir" value="${javadoc.dir}/EquationFunctions"/>
+    <property name="EquationFunctions.resources.dir" value="${EquationFunctions.root.dir}/resources"/>
+    <property name="EquationFunctions.manifest.dir" value="${EquationFunctions.root.dir}/manifest"/>
+    <property name="EquationFunctions.packages" value="EquationFunctions.*"/>
     <!-- Subdirectory for test reports -->
-    <property name="equations.tests.reports.dir" value="${equations.root.dir}/reports/tests" />
+    <property name="EquationFunctions.tests.reports.dir" value="${EquationFunctions.root.dir}/reports/tests" />
 
-    <!-- Define excludes for equations compile and javadoc -->
-    <property name="equations.excludes" value="**/notyet/*"/>
-    <property name="equations.tests.excludes" value="**/notyet/*"/>
-    <property name="equations.packages.excludes" value="**.test.*,**.notyet.*"/>
+    <!-- Define excludes for EquationFunctions compile and javadoc -->
+    <property name="EquationFunctions.excludes" value="**/notyet/*"/>
+    <property name="EquationFunctions.tests.excludes" value="**/notyet/*"/>
+    <property name="EquationFunctions.packages.excludes" value="**.test.*,**.notyet.*"/>
 
-    <path id="equations.project.class.path">
-      <pathelement location="${equations.classes.dir}"/>
+    <path id="EquationFunctions.project.class.path">
+      <pathelement location="${EquationFunctions.classes.dir}"/>
       <pathelement path="${project.class.path}/"/>
     </path>
 
   </target>
 
   <!-- =================================================================== -->
-  <!-- Compiles the equations project                                           -->
+  <!-- Compiles the EquationFunctions project                                           -->
   <!-- =================================================================== -->
-  <target name="compile-equations" depends="init-equations"  >
+  <target name="compile-EquationFunctions" depends="init-EquationFunctions"  >
 
-    <echo message=" COMPILE equations "/>
+    <echo message=" COMPILE EquationFunctions "/>
 
-    <mkdir dir="${equations.classes.dir}"/>
-    <javac srcdir="${equations.src.dir}"
-           excludes="${equations.excludes}"
-           classpathref="equations.project.class.path"
-           destdir="${equations.classes.dir}"
+    <mkdir dir="${EquationFunctions.classes.dir}"/>
+    <javac srcdir="${EquationFunctions.src.dir}"
+           excludes="${EquationFunctions.excludes}"
+           classpathref="EquationFunctions.project.class.path"
+           destdir="${EquationFunctions.classes.dir}"
            debug="${debug}"
            nowarn="${nowarn}"
            deprecation="${deprecation}" 
@@ -74,38 +74,38 @@
   </target>
 
   <!-- =================================================================== -->
-  <!-- Creates the equations.jar file                                           -->
+  <!-- Creates the EquationFunctions.jar file                                           -->
   <!-- =================================================================== -->
-  <target name="equations" depends="compile-equations"  >
+  <target name="EquationFunctions" depends="compile-EquationFunctions"  >
     <!-- copy over images -->
-    <copy todir="${equations.classes.dir}/equations/images">
-      <fileset dir="${equations.root.dir}/images"/>
+    <copy todir="${EquationFunctions.classes.dir}/EquationFunctions/images">
+      <fileset dir="${EquationFunctions.root.dir}/images"/>
     </copy>
-    <copy todir="${equations.classes.dir}/equations" file="${equations.resources.dir}/plugin.props"/>
-    <jar destfile="equations.jar" manifest="${equations.manifest.dir}/equations.manifest">
+    <copy todir="${EquationFunctions.classes.dir}/EquationFunctions" file="${EquationFunctions.resources.dir}/plugin.props"/>
+    <jar destfile="EquationFunctions.jar" manifest="${EquationFunctions.manifest.dir}/EquationFunctions.manifest">
       <fileset
-         dir="${equations.classes.dir}"
+         dir="${EquationFunctions.classes.dir}"
          includes="**"/>
       <fileset
-         dir="${equations.root.dir}/lib"
+         dir="${EquationFunctions.root.dir}/lib"
          includes="resources/**"/>
       <manifest>
-	<attribute name="Cytoscape-Plugin" value="equations.AttributeEquationsPlugin"/>
+	<attribute name="Cytoscape-Plugin" value="EquationFunctions.EquationFunctionsPlugin"/>
       </manifest>
     </jar>
-    <copy todir="${equations.lib.dir}" file="equations.jar"/>
+    <copy todir="${EquationFunctions.lib.dir}" file="EquationFunctions.jar"/>
   </target>
 
   <!-- =================================================================== -->
-  <!-- Compiles the equations tests                                             -->
+  <!-- Compiles the EquationFunctions tests                                             -->
   <!-- =================================================================== -->
-  <target name="compile-tests" depends="equations"  >
-    <mkdir dir="${equations.classes.dir}"/>
-    <javac srcdir="${equations.src.dir}"
+  <target name="compile-tests" depends="EquationFunctions"  >
+    <mkdir dir="${EquationFunctions.classes.dir}"/>
+    <javac srcdir="${EquationFunctions.src.dir}"
            includes="**/test/*"
-           excludes="${equations.tests.excludes}"
-           classpathref="equations.project.class.path"
-           destdir="${equations.classes.dir}"
+           excludes="${EquationFunctions.tests.excludes}"
+           classpathref="EquationFunctions.project.class.path"
+           destdir="${EquationFunctions.classes.dir}"
            debug="${debug}"
            deprecation="${deprecation}" 
            optimize="${optimize}"
@@ -113,52 +113,52 @@
   </target>
 
   <!-- =================================================================== -->
-  <!-- Creates the equations-tests.jar file                                     -->
+  <!-- Creates the EquationFunctions-tests.jar file                                     -->
   <!-- =================================================================== -->
   <target name="tests" depends="compile-tests"  >
-    <jar jarfile="equations-tests.jar"
-         basedir="${equations.classes.dir}"
+    <jar jarfile="EquationFunctions-tests.jar"
+         basedir="${EquationFunctions.classes.dir}"
          includes="**/test/*"/>
   </target>
 
   <!-- =================================================================== -->
   <!-- Build all jars                                                      -->
   <!-- =================================================================== -->
-  <target name="all" depends="equations"/>
+  <target name="all" depends="EquationFunctions"/>
 
   <!-- =================================================================== -->
   <!-- Run the Plugin                                                      -->
   <!-- =================================================================== -->
-  <target name="run" depends="equations" >
+  <target name="run" depends="EquationFunctions" >
     
     <java classname="cytoscape.cytoscape" 
-          classpathref="equations.project.class.path"
+          classpathref="EquationFunctions.project.class.path"
           fork="true"/>
-    <arg line = "-p ${equations.lib.dir}/equations.jar"/>
+    <arg line = "-p ${EquationFunctions.lib.dir}/EquationFunctions.jar"/>
     
 
   </target>
 
 
   <!-- =================================================================== -->
-  <!-- Runs the tests in equations-tests.jar                                    -->
+  <!-- Runs the tests in EquationFunctions-tests.jar                                    -->
   <!-- =================================================================== -->
   <target name="runtests" depends="tests"  >
-    <mkdir dir="${equations.tests.reports.dir}"/>
+    <mkdir dir="${EquationFunctions.tests.reports.dir}"/>
     <junit
        printsummary="yes"
        haltonfailure="no"
-       dir="${equations.classes.dir}"
+       dir="${EquationFunctions.classes.dir}"
        maxmemory="1G"
        >
       <formatter type="plain" usefile="true" />
-      <classpath refid="equations.project.class.path"/>
+      <classpath refid="EquationFunctions.project.class.path"/>
       <!-- The junit task doesn't support 'if' so we test for JUnit here -->
-      <batchtest fork="yes" todir="${equations.tests.reports.dir}" if="junit.present">
+      <batchtest fork="yes" todir="${EquationFunctions.tests.reports.dir}" if="junit.present">
         <fileset
-           dir="${equations.classes.dir}"
+           dir="${EquationFunctions.classes.dir}"
            includes="**/test/*"
-           excludes="${equations.tests.excludes}"
+           excludes="${EquationFunctions.tests.excludes}"
            />
       </batchtest>
     </junit>
@@ -167,31 +167,31 @@
   <!-- =================================================================== -->
   <!-- Creates the API documentation                                       -->
   <!-- =================================================================== -->
-  <target name="docs" depends="init-equations" >
-    <mkdir dir="${equations.javadoc.dir}"/>
-    <javadoc packagenames="${equations.packages}"
-             excludepackagenames="${equations.packages.excludes}"
-             sourcepath="${equations.src.dir}"
-             destdir="${equations.javadoc.dir}"
-             classpathref="equations.project.class.path"
+  <target name="docs" depends="init-EquationFunctions" >
+    <mkdir dir="${EquationFunctions.javadoc.dir}"/>
+    <javadoc packagenames="${EquationFunctions.packages}"
+             excludepackagenames="${EquationFunctions.packages.excludes}"
+             sourcepath="${EquationFunctions.src.dir}"
+             destdir="${EquationFunctions.javadoc.dir}"
+             classpathref="EquationFunctions.project.class.path"
              author="true"
              version="true"
              use="true"
              splitindex="true"
              noindex="false"
-             windowtitle="${equations.Name} API"
-             doctitle="${equations.Name}"
+             windowtitle="${EquationFunctions.Name} API"
+             doctitle="${EquationFunctions.Name}"
 	     />
   </target>
   
   <!-- =================================================================== -->
   <!-- Clean up, get back to original state                                -->
   <!-- =================================================================== -->
-  <target name="clean" depends="init-equations">
-    <delete dir="${equations.classes.dir}"/>
-    <delete file="equations.jar"/>
-    <delete file="${equations.lib.dir}/equations.jar"/>
-    <delete file="equations-tests.jar"/>
+  <target name="clean" depends="init-EquationFunctions">
+    <delete dir="${EquationFunctions.classes.dir}"/>
+    <delete file="EquationFunctions.jar"/>
+    <delete file="${EquationFunctions.lib.dir}/EquationFunctions.jar"/>
+    <delete file="EquationFunctions-tests.jar"/>
   </target>
 
 </project>
